  - [Tkenv]/default-run= option added
  - cWatch inspector added
  - Simulation|Restart changed to Rebuild (restart cannot be done properly)
  - several smaller improvements
#69 July 11, 1998
  - small improvements on gate inspector
#70 July 15, 1998
  - small fixes
  - small improvements on gate inspector
#71 July 24, 1998
  - arrow.cc changed; display string for connections changed (see Manual)
  - small fixes
#72 August 12, 1998
  - Borland C++ 5.0 project file added (tkenv.ide)
  - fixes necessary to run Tkenv on Windows
#73 August 13, 1998
  - support for compiled-in TCL code added.
    See the makefile for more info and to turn it on/off.

    Here's how it works: tcl2c.c generates tclcode.cc from  the .tcl files.
    tclcode.cc is in turn included into tkapp.cc. tkapp.cc includes tclcode.cc
    and uses compiled-in TCL code if OMNETPP_TKENV_DIR is undefined at
    compile-time.
#74 August 14, 1998
  - bugfixes
#74a August 17, 1998
  - dialog centering and focus problems fixed (or alleviated) on Windows
  - icon loading improved
#74b August 23, 1998
  - small fixes; widgets.tcl updated
#75 Dec 27, 1998
  - updated for sim170
  - cPacket inspector added
  - setType() moved to tklib.h/.cc for easy reuse
  - makefile renamed to makefile.in
  - stack usage statistics added to simple module inspector
  - runningModule() corrected to contextModule()
#76a-c Jan 25, 1999
  - inspector factories added
  - updated for sim172b
  - plugin support: automatically loads .tcl and .so files placed in the
    tkenv/plugins directory. Intended use: inspectors for custom classes.
#77a Feb 7, 1999
  - fixed bug in outvector-window (caused div by zero)
  - cMessage and cPacket inspector redesigned
  - fixed minor bug with anim speed settings
#78 Feb 7, 1999
  - stable version
#79 June 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog
  - tcl2c.c moved to util/